--- a/Main/courseWork/Menu.fxml
+++ b/Main/courseWork/Menu.fxml
@@ -1,31 +1,178 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="419.0" prefWidth="255.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Spinner fx:id="elevatorcap" layoutX="123.0" layoutY="210.0" prefHeight="25.0" prefWidth="100.0" />
-      <Spinner fx:id="ticks" layoutX="123.0" layoutY="119.0" prefHeight="25.0" prefWidth="100.0" />
-      <Spinner fx:id="floors" layoutX="123.0" layoutY="160.0" prefHeight="25.0" prefWidth="100.0" />
-      <Spinner fx:id="employees" layoutX="123.0" layoutY="250.0" prefHeight="25.0" prefWidth="100.0" />
-      <Spinner fx:id="mugdevs" layoutX="123.0" layoutY="288.0" prefHeight="25.0" prefWidth="100.0" />
-      <Spinner fx:id="goggledevs" layoutX="123.0" layoutY="327.0" prefHeight="25.0" prefWidth="100.0" />
-      <Text layoutX="22.0" layoutY="136.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ticks" wrappingWidth="87.47003364562988" />
-      <Text layoutX="34.0" layoutY="177.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Floors" />
-      <Text layoutX="18.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Elevator Capacity" />
-      <Text layoutX="22.0" layoutY="267.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Employees" />
-      <Text layoutX="32.0" layoutY="306.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mug Devs" />
-      <Text layoutX="29.0" layoutY="344.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Goggle Devs" />
-      <Button fx:id="run" layoutX="109.0" layoutY="363.0" mnemonicParsing="false" onAction="#runClicked" text="Run" />
-      <Slider layoutX="96.0" layoutY="7.0" />
-      <Slider layoutX="96.0" layoutY="34.0" />
-      <Spinner layoutX="123.0" layoutY="74.0" prefHeight="25.0" prefWidth="100.0" />
-      <Text layoutX="40.0" layoutY="25.0" strokeType="OUTSIDE" strokeWidth="0.0" text="P:" />
-      <Text layoutX="39.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Q:" />
-      <Text layoutX="33.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Seed:" />
+      <HBox>
+         <children>
+            <Label fx:id="P" text="P">
+               <font>
+                  <Font size="24.0" />
+               </font>
+               <HBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="40.0" top="5.0" />
+               </HBox.margin>
+               <padding>
+                  <Insets right="40.0" />
+               </padding>
+            </Label>
+            <Slider fx:id="Pslider" showTickLabels="true" showTickMarks="true" value="1.0">
+               <HBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </HBox.margin>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" top="5.0" />
+               </padding>
+            </Slider>
+         </children>
+      </HBox>
+      <HBox layoutY="71.0" prefHeight="68.0" prefWidth="299.0">
+         <children>
+            <Label fx:id="Q" prefHeight="53.0" prefWidth="124.0" text="Q">
+               <HBox.margin>
+                  <Insets bottom="5.0" left="5.0" top="5.0" />
+               </HBox.margin>
+               <font>
+                  <Font size="24.0" />
+               </font>
+               <padding>
+                  <Insets right="40.0" />
+               </padding>
+            </Label>
+            <Slider fx:id="Qslider" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="1.0">
+               <HBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </HBox.margin>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+            </Slider>
+         </children>
+      </HBox>
+      <VBox layoutX="14.0" layoutY="148.0">
+         <children>
+            <Label text="Seed">
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+               <font>
+                  <Font size="15.0" />
+               </font>
+               <padding>
+                  <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
+               </padding>
+            </Label>
+            <Label text="Ticks">
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+            <Label text="Floors">
+               <VBox.margin>
+                  <Insets bottom="7.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+            <Label text="Elevator Capacity">
+               <VBox.margin>
+                  <Insets bottom="7.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+            </Label>
+            <Label text="Employees">
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+            <Label text="Mug Devs">
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+            <Label text="Goggle Devs">
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+               <font>
+                  <Font size="15.0" />
+               </font>
+               <padding>
+                  <Insets bottom="10.0" />
+               </padding>
+            </Label>
+            <Label text="Elevators">
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
+      <VBox layoutX="130.0" layoutY="151.0">
+         <children>
+            <Spinner fx:id="seed" editable="true">
+               <VBox.margin>
+                  <Insets bottom="2.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+            </Spinner>
+            <Spinner fx:id="ticks" editable="true">
+               <VBox.margin>
+                  <Insets bottom="2.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+            </Spinner>
+            <Spinner fx:id="floors" editable="true">
+               <VBox.margin>
+                  <Insets bottom="2.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+            </Spinner>
+            <Spinner fx:id="elevatorcap" editable="true">
+               <VBox.margin>
+                  <Insets bottom="2.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+            </Spinner>
+            <Spinner fx:id="employees" editable="true">
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+            </Spinner>
+            <Spinner fx:id="mugdevs" editable="true">
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+            </Spinner>
+            <Spinner fx:id="goggledevs" editable="true">
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+            </Spinner>
+            <Spinner fx:id="elevators" editable="true">
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+            </Spinner>
+         </children>
+      </VBox>
+      <Button layoutX="131.0" layoutY="428.0" mnemonicParsing="false" onAction="#runClicked" text="Run" />
    </children>
 </AnchorPane>
