--- a/Main/courseWork/Menu.fxml
+++ b/Main/courseWork/Menu.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="474.0" prefWidth="299.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox>
          <children>
@@ -173,6 +173,7 @@
             </Spinner>
          </children>
       </VBox>
-      <Button layoutX="131.0" layoutY="428.0" mnemonicParsing="false" onAction="#runClicked" text="Run" />
+      <Button layoutX="65.0" layoutY="428.0" mnemonicParsing="false" onAction="#runClicked" text="Run" />
+      <Button layoutX="165.0" layoutY="428.0" mnemonicParsing="false" onAction="#runStudy" text="Run Study" />
    </children>
 </AnchorPane>
